--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "neopixel-strip-js",
   "version": "1.0.0",
-  "description": "Using node-pixel via Johnny-Five to run sequence of LED animations on the strip or ring format",
+  "description": "Using node-pixel module and Johnny-Five to run sequence of LED animations on the strip or ring format NeoPixels with Arduino.",
   "main": "server.js",
   "dependencies": {
     "node-pixel": "^0.3.2",
